examples/qualification/executable_module_entry/negative_multi_hop_cycle_bare_import/src/main.sm
Import "a.sm"

fn main() {
    return;
}
